flask project completed. react might not be finished in time for presentation

--- a/flask/app/auth/authtemplates/login.html
+++ b/flask/app/auth/authtemplates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <h3>Log In</h3>
-    <form class="container" method="POST">
+    <form class="container logincontainer" method="POST">
         {{ form.hidden_tag() }}
 
         {{ form.username(class='form-control', placeholder='Username', autocomplete='off') }}
