--- a/flask/app/auth/authtemplates/profile.html
+++ b/flask/app/auth/authtemplates/profile.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Edit Account:</h1>
-    <form class="container" method="POST">
+    <form class="container editprofile" method="POST">
         {{ form.hidden_tag() }}
 
         {{ form.username(class='form-control', placeholder='username', autocomplete='off') }}
