--- a/flask/app/auth/authtemplates/signup.html
+++ b/flask/app/auth/authtemplates/signup.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <h3>Sign Up</h3>
-    <form class="container" method="POST">
+    <form class="container signupcontainer" method="POST">
         {{ form.hidden_tag() }}
 
         {{ form.username(class='form-control', placeholder='Username', autocomplete='off') }}
